# controllers/Author.js
@@ -4,7 +4,7 @@ var utils = require('../utils/writer.js');
 var Author = require('../service/AuthorService');
 
 module.exports.getAuthorById = function getAuthorById (req, res, next) {
-  var authorID = req.swagger.params['authorID'].value;
+  var authorID = req.swagger.params['id_author'].value;
   Author.getAuthorById(authorID)
     .then(function (response) {
       utils.writeJson(res, response);
